Fixed background image issues. Image no longer extends past browser height. Image filter properly covers entire image. Image now fades to background color when match history data exceeds length of image.

--- a/league-stats/src/components/sass/App.sass
+++ b/league-stats/src/components/sass/App.sass
@@ -45,12 +45,12 @@ table
   font-family: 'GSans'
   src: local('GSans'), url(../../fonts/GillSansMTPro-Medium.otf) format('otf')
 
-
 html
-  background-image: radial-gradient(transparent, black), url('http://ddragon.leagueoflegends.com/cdn/img/champion/splash/Annie_10.jpg')
+  background-image: radial-gradient(transparent, #161818), linear-gradient(to top, rgba(22, 24, 24, 1), rgba(22, 24, 24, 0)), url('http://ddragon.leagueoflegends.com/cdn/img/champion/splash/Annie_10.jpg');
   background-repeat: no-repeat
   background-size: cover
-  background-position: center
+  background-position: center bottom
+  background-color: #161818
   min-height: 100%
 
 .App
